Update Book DB schema

--- a/mysqlinit.yml
+++ b/mysqlinit.yml
@@ -8,40 +8,42 @@ metadata:
   selfLink: /api/v1/namespaces/default/configmaps/mysqlinit
   uid: 3225d5ea-f3b7-11e8-81da-482ae31e6a94
 data:
-  book.sql: "CREATE DATABASE  IF NOT EXISTS `book` /*!40100 DEFAULT CHARACTER SET
-    utf8mb4 COLLATE utf8mb4_0900_ai_ci */;\nUSE `book`;\n-- MySQL dump 10.13  Distrib 
-    8.0.13, for Linux (x86_64)\n--\n-- Host: localhost    Database: book\n-- ------------------------------------------------------\n--
-    Server version\t8.0.13\n\n/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT
-    */;\n/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;\n/*!40101
-    SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;\n SET NAMES utf8 ;\n/*!40103
-    SET @OLD_TIME_ZONE=@@TIME_ZONE */;\n/*!40103 SET TIME_ZONE='+00:00' */;\n/*!40014
-    SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */;\n/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS,
-    FOREIGN_KEY_CHECKS=0 */;\n/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO'
-    */;\n/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;\n\n--\n-- Table
-    structure for table `Author`\n--\n\nDROP TABLE IF EXISTS `Author`;\n/*!40101 SET
-    @saved_cs_client     = @@character_set_client */;\n SET character_set_client =
-    utf8mb4 ;\nCREATE TABLE `Author` (\n  `id` int(11) NOT NULL AUTO_INCREMENT,\n
-    \ `firstName` varchar(45) DEFAULT NULL,\n  `lastName` varchar(45) DEFAULT NULL,\n 
-    \ PRIMARY KEY (`id`),\n  UNIQUE KEY `id_UNIQUE` (`id`)\n) ENGINE=InnoDB DEFAULT 
-    CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET character_set_client
-    = @saved_cs_client */;\n\n--\n-- Table structure for table `Book`\n--\n\nDROP
-    TABLE IF EXISTS `Book`;\n/*!40101 SET @saved_cs_client     = @@character_set_client
-    */;\n SET character_set_client = utf8mb4 ;\nCREATE TABLE `Book` (\n  `id` int(11) 
-    NOT NULL AUTO_INCREMENT,\n  `title` varchar(45) DEFAULT NULL,\n  `isbn` varchar(45)
-    DEFAULT NULL,\n  `pageCount` int(11) DEFAULT NULL,\n  `authorID` int(11) DEFAULT 
-    NULL,\n  PRIMARY KEY (`id`),\n  UNIQUE KEY `id_UNIQUE` (`id`),\n  CONSTRAINT `authorID`
-    FOREIGN KEY (`id`) REFERENCES `Author` (`id`) ON DELETE CASCADE ON UPDATE RESTRICT\n)
-    ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET
-    character_set_client = @saved_cs_client */;\n\n--\n-- Table structure for table
-    `DATABASECHANGELOGLOCK`\n--\n\nDROP TABLE IF EXISTS `DATABASECHANGELOGLOCK`;\n/*!40101
-    SET @saved_cs_client     = @@character_set_client */;\n SET character_set_client
-    = utf8mb4 ;\nCREATE TABLE `DATABASECHANGELOGLOCK` (\n  `ID` int(11) NOT NULL,\n 
-    \ `LOCKED` bit(1) NOT NULL,\n  `LOCKGRANTED` datetime DEFAULT NULL,\n  `LOCKEDBY`
-    varchar(255) DEFAULT NULL,\n  PRIMARY KEY (`ID`)\n) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4
-    COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET character_set_client = @saved_cs_client
-    */;\n/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;\n\n/*!40101 SET SQL_MODE=@OLD_SQL_MODE
-    */;\n/*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */;\n/*!40014 SET
-    UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;\n/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT
-    */;\n/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;\n/*!40101
-    SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;\n/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES
-    */;\n\n-- Dump completed on 2018-12-15 20:32:09\n"
+    book.sql: "CREATE DATABASE  IF NOT EXISTS `book` /*!40100 DEFAULT CHARACTER
+      SET utf8mb4 COLLATE utf8mb4_0900_ai_ci */;\nUSE `book`;\n-- MySQL dump 10.13
+      \ Distrib 8.0.13, for Linux (x86_64)\n--\n-- Host: localhost    Database: book\n--
+      ------------------------------------------------------\n-- Server version\t8.0.13\n\n/*!40101
+      SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;\n/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS
+      */;\n/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;\n SET
+      NAMES utf8 ;\n/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */;\n/*!40103 SET TIME_ZONE='+00:00'
+      */;\n/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */;\n/*!40014
+      SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */;\n/*!40101
+      SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;\n/*!40111
+      SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;\n\n--\n-- Table structure for
+      table `DATABASECHANGELOGLOCK`\n--\n\nDROP TABLE IF EXISTS `DATABASECHANGELOGLOCK`;\n/*!40101
+      SET @saved_cs_client     = @@character_set_client */;\n SET character_set_client
+      = utf8mb4 ;\nCREATE TABLE `DATABASECHANGELOGLOCK` (\n  `ID` int(11) NOT NULL,\n 
+      \ `LOCKED` bit(1) NOT NULL,\n  `LOCKGRANTED` datetime DEFAULT NULL,\n  `LOCKEDBY`
+      varchar(255) DEFAULT NULL,\n  PRIMARY KEY (`ID`)\n) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4
+      COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET character_set_client = @saved_cs_client
+      */;\n\n--\n-- Table structure for table `author`\n--\n\nDROP TABLE IF EXISTS
+      `author`;\n/*!40101 SET @saved_cs_client     = @@character_set_client */;\n
+      SET character_set_client = utf8mb4 ;\nCREATE TABLE `author` (\n  `id` int(11) 
+      NOT NULL AUTO_INCREMENT,\n  `first_name` varchar(45) DEFAULT NULL,\n  `last_name`
+      varchar(45) DEFAULT NULL,\n  `email` varchar(45) DEFAULT NULL,\n  `phone` varchar(45)
+      DEFAULT NULL,\n  PRIMARY KEY (`id`),\n  UNIQUE KEY `id_UNIQUE` (`id`)\n) ENGINE=InnoDB
+      DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET character_set_client
+      = @saved_cs_client */;\n\n--\n-- Table structure for table `book`\n--\n\nDROP
+      TABLE IF EXISTS `book`;\n/*!40101 SET @saved_cs_client     = @@character_set_client
+      */;\n SET character_set_client = utf8mb4 ;\nCREATE TABLE `book` (\n  `id` int(11) 
+      NOT NULL AUTO_INCREMENT,\n  `title` varchar(45) DEFAULT NULL,\n  `isbn` varchar(45)
+      DEFAULT NULL,\n  `page_count` int(11) DEFAULT NULL,\n  `author_id` int(11) DEFAULT 
+      NULL,\n  UNIQUE KEY `id_UNIQUE` (`id`),\n  KEY `authorID_idx` (`author_id`),\n
+      \ CONSTRAINT `author_id` FOREIGN KEY (`author_id`) REFERENCES `author` (`id`)
+      ON DELETE CASCADE ON UPDATE RESTRICT\n) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4
+      COLLATE=utf8mb4_0900_ai_ci;\n/*!40101 SET character_set_client = @saved_cs_client
+      */;\n/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;\n\n/*!40101 SET SQL_MODE=@OLD_SQL_MODE
+      */;\n/*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */;\n/*!40014 SET
+      UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;\n/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT
+      */;\n/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;\n/*!40101
+      SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;\n/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES
+      */;\n\n-- Dump completed on 2018-12-18 16:35:27\n"
