--- a/nginx-config.yml
+++ b/nginx-config.yml
@@ -43,8 +43,11 @@ data:
         listen 80;
         access_log /var/log/nginx/app.access_log main;
         error_log /var/log/nginx/app.error_log;
+        set $restapi http://svc-web.default.svc.cluster.local:8080;
+        resolver kube-dns.kube-system.svc.cluster.local valid=10s;
         location / {
-          proxy_pass http://svc-web;
+          #proxy_pass http://svc-web;
+          proxy_pass $restapi;
           proxy_http_version 1.1;
         }
       }
