--- a/access-log-template.yml
+++ b/access-log-template.yml
@@ -10,7 +10,7 @@ metadata:
 data:
   access_log_template.json: |
     {
-      "index_patterns": ["webapp.access.logs*"],
+      "index_patterns": ["restapi.access.logs*"],
       "settings": {
         "number_of_shards": 5
       },
