--- a/mysqlset.yml
+++ b/mysqlset.yml
@@ -77,6 +77,7 @@ spec:
       name: mysql-persistent-storage
     spec:
       accessModes: [ "ReadWriteOnce" ]
+#      storageClassName: local-storage
       resources:
         requests:
           storage: 2Gi
