--- a/kibana.yml
+++ b/kibana.yml
@@ -35,7 +35,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 10
 #      imagePullSecrets:
-#      - name: docker
+#      - name: iconverse-docker
       containers:
       - name: kibana
         securityContext:
