--- a/ingress.yml
+++ b/ingress.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/affinity: "cookie"
 #    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route"
