--- a/redis-cluster-config.yml
+++ b/redis-cluster-config.yml
@@ -4,22 +4,8 @@ metadata:
   name: redis-cluster-config
   labels:
     app: redis-cluster
+    component: redis
 data:
-  fix-ip.sh: |
-    #!/bin/sh
-    CLUSTER_CONFIG="/data/nodes.conf"
-    if [ -f ${CLUSTER_CONFIG} ]; then
-      if [ -z "${POD_IP}" ]; then 
-        echo "Unable to determine Pod IP address!"
-        exit 1
-      fi
-      echo "Updating my IP to ${POD_IP} in ${CLUSTER_CONFIG}"
-      # I am not sure about the :0 Need to check the content of $CLUSTER_CONFIG inside the pod: `k exec -it redis-cluster-0 -- cat /data/nodes.conf`
-      sed -i.bak -e "/myself/ s/:0/${POD_IP}:0/" ${CLUSTER_CONFIG}
-      sed -i.bak -e "/myself/ s/[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${POD_IP}/" ${CLUSTER_CONFIG}
-    else
-      echo $CLUSTER_CONFIG not found!
-    fi
   redis.conf: |+
     cluster-enabled yes
     cluster-require-full-coverage no
