AspNetCoreApiStarter running on K8s now

--- a/mysql-secret.yml
+++ b/mysql-secret.yml
@@ -4,6 +4,6 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  mysql-root-password: VGFpZ2VyU2luZ2Fwb3JlMTIzKg==
-  mysql-user: aWNvbnZlcnNl
-  mysql-password: VGFpZ2VyU2luZ2Fwb3JlMTIzKg==
+  mysql-root-password: UEAkJHcwcmQ=
+  mysql-user: Z3Vlc3QK
+  mysql-password: UEAkJHcwcmQ=
