--- a/ingress-restapi.yml
+++ b/ingress-restapi.yml
@@ -6,14 +6,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-#    nginx.ingress.kubernetes.io/app-root: /
-#    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/affinity: "cookie"
 #    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
-#    nginx.ingress.kubernetes.io/session-cookie-name: "route"
-#    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
-#    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
-#    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
+    nginx.ingress.kubernetes.io/session-cookie-name: "route"
+    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
 #    certmanager.k8s.io/issuer: "iconverse-letsencrypt"
 #    certmanager.k8s.io/acme-challenge-type: http01
 #    kubernetes.io/tls-acme: 'true'
@@ -28,16 +26,26 @@ spec:
     - host:
       http: 
         paths:
-          - path: /apistarter(/|$)(.*)
+          - path: /restapi
             backend:
-#              serviceName: svc-aspnetapistarter-ingress
-              serviceName: svc-aspnetapistarter
-              servicePort: 5000
-          - path: //apistarter(/|$)(.*)
+#              serviceName: svc-restapi-ingress
+              serviceName: svc-restapi
+              servicePort: 8080
+          - path: //restapi
             backend:
-#              serviceName: svc-aspnetapistarter-ingress
-              serviceName: svc-aspnetapistarter
-              servicePort: 5000
+#              serviceName: svc-restapi-ingress
+              serviceName: svc-restapi
+              servicePort: 8080
+          - path: /restapi/*
+            backend:
+#              serviceName: svc-restapi-ingress
+              serviceName: svc-restapi
+              servicePort: 8080
+          - path: //restapi/*
+            backend:
+#              serviceName: svc-restapi-ingress
+              serviceName: svc-restapi
+              servicePort: 8080
           - path: /kibana
             backend:
 #              serviceName: svc-kibana-ingress
