--- a/mysqlset.yml
+++ b/mysqlset.yml
@@ -32,8 +32,8 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mysql
-        image: mysql:latest
-#        image: khteh/database:mysql
+#        image: mysql:latest
+        image: khteh/mysql:latest
         imagePullPolicy: Always
 #        command: ["mysqld"]
 #        args: ["--lower_case_table_names=1", "--skip-ssl", "--ignore-db-dir=lost+found"]
@@ -56,9 +56,9 @@ spec:
                name: mysql-secret
                key: mysql-password
          - name: MYSQL_DATABASE
-           value: book
-#         - name: MYSQL_DATABASE_1
-#           value: book
+           value: biz4xdb
+         - name: MYSQL_DATABASE_1
+           value: AspNetCoreApiStarter
         ports:
         - containerPort: 3306
           name: mysql
