--- a/biz4x-frontend.yml
+++ b/biz4x-frontend.yml
@@ -1,22 +1,25 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: aspnetapistarter
+  name: biz4x-frontend
   labels:
-    app: aspnetapistarter
+    app: biz4x-frontend
+    component: biz4x
 spec:
-  serviceName: svc-aspnetapistarter
+  serviceName: svc-biz4xfrontend
   podManagementPolicy: "Parallel" # Default is OrderedReady
   replicas: 2 # Default is 1
   updateStrategy: 
     type: RollingUpdate
   selector:
     matchLabels:
-      app: aspnetapistarter # Has to match .spec.template.metadata.labels
+      app: biz4x-frontend # Has to match .spec.template.metadata.labels
+      component: biz4x
   template:
     metadata:
       labels:
-        app: aspnetapistarter # Has to match .spec.selector.matchLabels
+        app: biz4x-frontend # Has to match .spec.selector.matchLabels
+        component: biz4x
     spec:
       terminationGracePeriodSeconds: 10
 #      affinity:
@@ -27,14 +30,14 @@ spec:
 #              - key: app
 #                operator: In
 #                values:
-#                - aspnetapistarter
+#                - biz4x-frontend
 #            topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: aspnetapistarter
-        image: khteh/asp.netcoreapistarter:latest
+      - name: biz4x-frontend
+        image: 699575179986.dkr.ecr.ap-southeast-1.amazonaws.com/biz4x-frontend:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 5000
+        - containerPort: 5001
           name: http
           protocol: TCP
 #          hostPort: 8081
@@ -72,7 +75,7 @@ spec:
       volumes:
       - name: mysql-connection
         secret:
-          secretName: aspnetapistarter
+          secretName: biz4xdb-secret
 #      - name: fluentd-config
 #        configMap:
 #          name: fluentd-config
