--- a/svc-biz4xbackend.yml
+++ b/svc-biz4xbackend.yml
@@ -6,7 +6,7 @@ metadata:
 #    alb.ingress.kubernetes.io/healthcheck-path: /biz4xbackend/actuator/health
   labels: 
     component: biz4x
-    app: biz4xbackend
+    app: biz4x-backend
 spec:
   ports:  
   - name: http
@@ -19,7 +19,7 @@ spec:
     targetPort: 443
   clusterIP: None # Headless. type cannot be LoadBalancer
   selector:
-    app: biz4xbackend
+    app: biz4x-backend
     component: biz4x
 #    tier: frontend
 #  type: LoadBalancer # Exposes web to traffic from outside of the cluster 
@@ -27,9 +27,9 @@ spec:
 #apiVersion: v1
 #kind: Service 
 #metadata:
-#  name: svc-biz4xbackend-ingress
+#  name: svc-biz4x-backend-ingress
 #  labels: 
-#    app: biz4xbackend
+#    app: biz4x-backend
 #spec:
 #  ports:  
 #  - name: http
@@ -42,4 +42,4 @@ spec:
 #    targetPort: 443
 #  type: NodePort
 #  selector:
-#    app: biz4xbackend
+#    app: biz4x-backend
